[package]
name = "participant"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock = ["fake"]
#default = ["mock"] # TODO: remove

[dependencies]
tonic = "0.5"
protos = { path = "../protos" }
utils = { path = "../utils" }
rocket = { version = "0.5.0-rc.1", features=["secrets", "tls"] }
rocket_dyn_templates = {version="0.1.0-rc.1", features=["tera"] }
futures = "0.3"
fake = { version = "2.4", optional = true }

