[package]
name = "rpctest-client"
version = "0.1.0"
edition = "2018"
[[bin]]
name = "rpctest-client"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = { version = "0.4", features = ["retry", "reconnect"] }
tonic = "0.5"
protos = { path = "../protos" }
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

[features]
loopback = ["protos/loopback"]
