[package]
name = "submission_service"
version = "0.1.0"
edition = "2018"
[[bin]]
name = "submission_service"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
protos = { path = "../protos" }
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
mongodb = "2.0"
argon2 = "0.2"
rand_core = { version = "0.6", features = ["std"] }
futures = "0.3"
utils = { path = "../utils" }
rand = "0.8"

[dev-dependencies]
tower = "0.4"
tokio-test = "0.4"

[features]
loopback = ["protos/loopback"]
