[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.8"
rand = "0.8"
chrono = "0.4"
prost-types = "0.8"
bson = "2.0.0-beta.3"
protos = { path = "../protos" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
temp_testdir = "0.2"
